--- a/ACNN.ipynb
+++ b/ACNN.ipynb
@@ -164,7 +164,7 @@
     "    false_neg = tf.math.count_nonzero((predicted - 1) * y_true)\n",
     "    x = tf.cast((true_pos + false_pos) * (true_pos + false_neg) \n",
     "        * (true_neg + false_pos) * (true_neg + false_neg), tf.float32)\n",
-    "    return tf.cast((true_pos * true_neg) - (false_pos * false_neg), tf.float32) / tf.sqrt(x)\n"
+    "    return tf.cast((true_pos * true_neg) - (false_pos * false_neg), tf.float32) / tf.sqrt(x)"
    ]
   },
   {
