--- a/CNN多头自监督.ipynb
+++ b/CNN多头自监督.ipynb
@@ -356,15 +356,8 @@
     "history = model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=64, batch_size=20,verbose=1)\n",
     "# Final evaluation of the model\n",
     "scores = model.evaluate(X_test, y_test, verbose=0)\n",
-    "print(\"CNN Error: %.2f%%\" % (100-scores[3]*100))\n"
+    "print(\"CNN Error: %.2f%%\" % (100-scores[3]*100))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
